<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Compose</string>
    <string name="show_less">show less</string>
    <string name="show_more">show more</string>
    <string name="cd_crop_square" tools:ignore="ExtraTranslation">Crop</string>
    <string name="cd_done">Done</string>
    <string name="cd_event">Event</string>
    <string name="cd_privacy">Privacy</string>
    <string name="cd_restore">Restore</string>
    <string name="tasks">Tasks</string>
    <string name="topics">Topics</string>
    <string name="weather">Weather</string>
    <string name="add_tasks">ADD TASKS</string>
    <string name="edit">EDIT</string>
    <string name="edit_message">Edit feature is not supported</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="temperature">18 ℃</string>
    <string name="refresh">Refresh</string>
    <string name="due">Due</string>
    <string name="account_redacted">• • • • • </string>
    <string name="total">Total</string>
    <string name="accounts">Accounts</string>
    <string name="bills">Bills</string>
    <string name="sort">Sort</string>
    <string name="see_all">SEE ALL</string>
    <string name="cd_open_navigation_drawer">Open navigation drawer</string>
    <string name="home_popular_section_title">Popular on Jetnews</string>
    <string name="state_not_subscribed">not subscribed</string>
    <string name="state_subscribed">subscribed</string>
    <string name="cd_navigate_up">Navigate up</string>
    <string name="cd_show_fewer">Show fewer like this</string>
    <string name="action_read_article">read article</string>
    <string name="fewer_stories">Show fewer stories like this?</string>
    <string name="fewer_stories_content">This feature is not yet implemented</string>
    <string name="agree">AGREE</string>
    <string name="home_post_min_read">%1$s - %2$d min read</string>
    <string name="go_to_fragment">Go To Fragment\n(Migration in fragment)</string>
    <string name="hello_i_am_view">Hello I am from View family</string>
    <string name="hello_i_am_from_compose">Hello I am from compose family</string>
    <string name="go_to_view_inside_compose_activity">Go To \'View Inside compose\' activity</string>
    <string name="back_icon_description">back icon</string>
    <string name="value_is_updating_from_view">Value is updating from view: %1$d</string>
    <string name="fragment">Fragment</string>
    <string name="hello_world">Hello World</string>
    <string name="here_we_learn_android_view_system_inside_compose">Here we learn Android View system inside compose</string>
    <string name="below_textview_is_rendering_html_content">Below textview is rendering html content but with compose we can\'t do it, so for that limitation we have to use Android View inside composable function</string>
    <string name="the_avocado_lorem_ipsum"><![CDATA[The avocado (Persea americana) is a tree, long thought to have originated in South Central Mexico, classified as a member of the flowering plant family Lauraceae. The fruit of the plant, also called an avocado (or avocado pear or alligator pear), is botanically a large berry containing a single large seed.<br><br>Avocados are commercially valuable and are cultivated in tropical and Mediterranean climates throughout the world. They have a green-skinned, fleshy body that may be pear-shaped, egg-shaped, or spherical. Commercially, they ripen after harvesting. Avocado trees are partially self-pollinating and are often propagated through grafting to maintain a predictable quality and quantity of the fruit.<br><br>(From <a href=\"https://en.wikipedia.org/wiki/Avocado\">Wikipedia</a>)]]></string>
    <string name="click_to_add_1_update_value_from_compose_to_view">Click to Add 1\n(update value from compose to view)</string>
    <string name="valueEqualTo">Value = %1$s</string>
    <string name="placeholder_search">Search</string>
    <string name="hl1">Inversions</string>
    <string name="hl2">Quick yoga</string>
    <string name="hl3">Stretching</string>
    <string name="hl4">Tabata</string>
    <string name="hl5">HIIT</string>
    <string name="hl6">Pre-natal yoga</string>
    <string name="hgl1">Short mantras</string>
    <string name="hgl2">Nature meditations</string>
    <string name="hgl3">Stress and anxiety</string>
    <string name="hgl4">Self massage</string>
    <string name="hgl5">Overwhelmed</string>
    <string name="hgl6">Nightly wind down</string>
    <string name="GoogleMapsPlaceDescription">Pune is a sprawling city in the western Indian state of Maharashtra. It was once the base of the Peshwas (prime ministers) of the Maratha Empire, which lasted from 1674 to 1818. It\'s known for the grand Aga Khan Palace, built in 1892 and now a memorial to Mahatma Gandhi, whose ashes are preserved in the garden. The 8th-century Pataleshwar Cave Temple is dedicated to the Hindu god Shiva.</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="tab_inbox">Inbox</string>
    <string name="tab_article">Articles</string>
    <string name="tab_dm">Direct Messages</string>
    <string name="tab_groups">Groups</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply All</string>
    <string name="search1">Search</string>
    <string name="search_replies">search replies</string>
    <string name="profile">Profile</string>
    <string name="back_arrow_description">back icon for go to previous screen</string>
    <string name="uicomponents">UI Components</string>
    <string name="migrationToCompose">Migration to compose</string>
    <string name="state">State</string>
    <string name="learnstatewithviewmodel">Learn state with view model</string>
    <string name="learncompositionlocal">Learn Composition Local</string>
    <string name="custommodifier">Custom Modifier</string>
    <string name="customlayout">Custom Layout</string>
    <string name="animationsamples">Animation Samples</string>
    <string name="navigationex1">NavigationEx1 with arg,DeepLink</string>
    <string name="navigationexample">Navigation Example 1 with arg,DeepLink</string>
    <string name="composedestination">ComposeDestination lib</string>
    <string name="accessibility">Accessibility</string>
    <string name="drawsamples">Draw Samples</string>
    <string name="anyscreen">Any Screen</string>
    <string name="slotapi">Slot API</string>
    <string name="compose_samples">Compose Samples</string>
    <string name="baseLineToTop">baseLineToTop</string>
    <string name="rotateComposable">Rotate composable</string>
    <string name="composableVersusComposed">Composable Versus composed</string>
    <string name="learnstate">Learn state (VM)</string>
    <string name="dependentVariableState">Dependent variable state</string>
    <string name="singleClickText">single click text</string>
    <string name="delayedClickText">Delayed click text</string>
    <string name="breaking_news_from_us">Breaking news from United States: Suspect and security guard dead, officer and 6 bystanders wounded in Miami-area bar shooting, police say</string>
    <string name="reach_your_goals">reach your goals.</string>
    <string name="achieve_your_dreams">achieve your dreams.</string>
    <string name="be_happy">be happy.</string>
    <string name="be_healthy">be healthy.</string>
    <string name="get_rid_of_depression">get rid of depression.</string>
    <string name="single_click">Single Click</string>
    <string name="disable_click_text">disable click text</string>
    <string name="text_with_gradient_background">text with gradient background</string>
    <string name="text_with_textcolor_lineargradient">Text with textColor linearGradient</string>
    <string name="text_with_textcolor_lineargradient_with_animation">Text with textColor linearGradient with animation</string>
    <string name="text_with_textcolor_lineargradient_with_reverse_animation">Text with textColor linearGradient with reverse animation</string>
    <string name="text_with_textcolor_horizontalgradient">Text with textColor horizontalGradient</string>
    <string name="text_with_textcolor_verticalgradient">Text with textColor verticalGradient</string>
    <string name="text_with_textcolor_radialgradient">Text with textColor radialGradient</string>
    <string name="text_with_textcolor_sweepgradient">Text with textColor sweepGradient</string>
    <string name="text_with_background_color">text with background color</string>
    <string name="hello_this_text_is_in_center">Hello %1$s, this text is in center</string>
    <string name="circle_shape_text">circle shape text</string>
    <string name="rounded_corner_shape_text">Rounded corner shape text</string>
    <string name="text_with_alpha_45f_0f_to_1f">Text with alpha .45f(0f to 1f)</string>
    <string name="accessibility_text_with_onclicklabel">accessibility text with onClickLabel</string>
    <string name="you_are_clicking_on_accessibility_text">you are Clicking on accessibility text</string>
    <string name="onlongclick_text_with_accessibility">onLongClick text with accessibility</string>
    <string name="you_are_long_clicking_on_accessibility_text">you are Long Clicking on accessibility text</string>
    <string name="long_click">Long Click</string>
    <string name="center_align_text">Center align text</string>
    <string name="text_with_shadow">text with shadow</string>
    <string name="font_family_serif">font family Serif</string>
    <string name="font_family_from_resource">font family from resource</string>
    <string name="h">H</string>
    <string name="ello">"ello "</string>
    <string name="w">W</string>
    <string name="orld">orld</string>
    <string name="paragraph_annotated_string">Paragraph annotated string:\n</string>
    <string name="hello">Hello</string>
    <string name="compose">Compose</string>
    <string name="max_line_2">max line 2</string>
    <string name="text_overflow">"Text overflow "</string>
    <string name="selection_container_content">Selectable text,\n\nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="this_text_is_selectable">This text is selectable</string>
    <string name="this_one_too">This one too</string>
    <string name="but_not_this_one">But not this one</string>
    <string name="disable_selection_text">Disable selection text</string>
    <string name="don_t_touch_me">don\'t touch me</string>
    <string name="but_again_you_can_select_this_one">But again, you can select this one</string>
    <string name="and_this_one_too">And this one too</string>
    <string name="text_with_which_character_clicked">text with which character clicked</string>
    <string name="th_character_is_clicked">%1$d -th character is clicked.</string>
    <string name="everything_you_need_to">"Everything you need to "</string>
    <string name="everything">Everything</string>
</resources>