<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootMigrationActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_icon_description"
        android:padding="16dp"
        android:rotation="270"
        android:src="@drawable/ic_arrow_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:text="@string/fragment"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/txtCenter"
        app:layout_constraintEnd_toEndOf="@id/txtCenter"
        app:layout_constraintBottom_toTopOf="@id/txtCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".75"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_i_am_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/composeViewFr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/txtCenter"
        app:layout_constraintStart_toStartOf="@id/txtCenter"
        app:layout_constraintTop_toBottomOf="@id/txtCenter"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>