<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootMigrationActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.migration.MigrationActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Activity"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnGoToFragment"
        app:layout_constraintEnd_toEndOf="@id/btnGoToFragment"
        app:layout_constraintStart_toStartOf="@id/btnGoToFragment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoToFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/go_to_fragment"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/txtCenter"
        app:layout_constraintEnd_toEndOf="@id/txtCenter"
        app:layout_constraintStart_toStartOf="@id/txtCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_i_am_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/composeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/txtCenter"
        app:layout_constraintStart_toStartOf="@id/txtCenter"
        app:layout_constraintTop_toBottomOf="@id/txtCenter" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoToViewInsideComposeActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/go_to_view_inside_compose_activity"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/composeView"
        app:layout_constraintStart_toStartOf="@id/composeView"
        app:layout_constraintTop_toBottomOf="@id/composeView"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>